<resources>
    <string name="app_name">Data Dial</string>
    <string name="usage_permission_text_1">Usage access is required to see your actual mobile data usage.\n\nFirst, click the "Grant permission" button to open the system Usage access screen.</string>
    <string name="usage_permission_text_2">Next, click on NUD to open the screen shown below, and click the switch to enable usage access.</string>
    <string name="usage_permission_text_3">Finally, keep clicking back until you return to this screen.</string>
    <string name="why_scary_phone_permission">Permission to \"make and manage phone calls\" is required to see your mobile data usage.\n\nThis app will never actually make phone calls.</string>
    <string name="prefs_title_startdate">Start day</string>
    <string name="prefs_categorytitle_billingcycle">Mobile plan</string>
    <string name="prefs_key_billingcycle_startday">prefs_billingcycle_startday</string>
    <string name="prefs_itemtitle_intervaltype">Interval type</string>
    <string name="prefs_itemkey_intervaltype">prefs_itemkey_intervaltype</string>
    <string name="prefs_itemkey_phonepermstate">prefs_itemkey_phonepermstate</string>
    <string name="prefs_itemkey_firstrun">prefs_itemkey_firstrun</string>
    <string name="widget_chart_content_description">Chart showing your current data usage</string>
    <string name="prefs_key_maxdata">prefs_maxdata</string>
    <string name="menu_activity_title_settings">Settings</string>
    <string name="widget_data_template">%1$.1f Gb</string>
    <string name="widget_data_template_small">%1$.1f</string>
    <string name="widget_days_template">day %1$d of %2$d</string>
    <string name="bottomnav_title_home">Home</string>
    <string name="bottomnav_title_about">About</string>
    <string name="prepermission_fragment_previous_arrow_description">Previous screen</string>
    <string name="prepermission_fragment_next_arrow_description">Next screen</string>
    <string name="prepermission_page_1_old">Two permissions are required to read your mobile data usage.\n\nThe next two screens will step you through granting those permissions.\n\nTap the right arrow to begin.</string>
    <string name="prepermission_alert_dialog_title">Continue without granting permission?</string>
    <string name="prepermission_alert_dialog_message">If you continue without granting permission the app won\'t be able to display your mobile data usage.</string>
    <string name="prepermission_alert_dialog_positive_button_caption">Continue</string>
    <string name="prepermission_alert_dialog_negative_button_caption">Cancel</string>
    <string name="snackbar_noperm_action">Fix</string>
    <string name="main_snackbar_nopermission">Don\'t have permission to read data usage</string>
    <string name="permission_denied_dialog_title">Grant permission</string>
    <string name="permission_denied_dialog_message">You\'ve denied \"Make and Manage phone calls\" permission and ticked \"Don\'t ask again\". You must now use the app info screen to grant permissions.</string>
    <string name="prepermission_button_grant_caption">Grant permission</string>
    <string name="permission_granted">Permission granted</string>
    <string name="image_description_up_arrow">Up arrow</string>
    <string name="image_description_down_arrow">Down arrow</string>
    <string name="prefs_itemtitle_maxdata">Max data</string>
    <string name="about_headline_version">Version</string>
    <string name="about_headline_author">Author</string>
    <string name="app_author">Daniel Everett</string>
    <string name="exception_ppra_phone_permission_already_granted">PrePermissionRequestActivity phone permission button visible but permission already granted</string>
    <string name="firstrun_continue_button_caption">Continue</string>
    <string name="firstrun_settings_button_caption">Change settings</string>
    <string name="firstrun_blurb">To get started we\'ve assumed you have a %1$d Gb data plan that starts on day %2$d of the month.\n\nIf this is correct just tap %3$s, otherwise tap %4$s to change it.</string>
    <string name="error_indicator_content_description">Error indicator</string>
    <string name="preperm_req_screen1_image_content_description">A screenshot of the Android system permission request dialog</string>
    <string name="preperm_page3_image_content_description">A screenshot of the Android system Usage Permission screen</string>
    <string name="about_headline_license">License</string>
    <string name="about_headline_privacypolicy">Privacy Policy</string>
    <string name="about_subhead_privacypolicy">How this app uses your personal information</string>
    <string name="scrolling_screen_of_text_error">Raw text resource \'%1$d\' not found</string>
    <string name="pref_key_decimalGb">prefs_GbIs1000Bytes</string>
    <string name="pref_GbIs1000Bytes_title">Use decimal definition of Gb (1 Gb = 1000^3)</string>
    <string name="pref_GbIs1000Bytes_summaryOff">Long tap here for more information</string>
    <string name="pref_decimalGb_moreinfoTitle">Use decimal definition of Gb</string>
    <string name="longclickswitchpref_missingTitle">Missing title resource</string>
</resources>

