<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="https://github.com/dae3"
    xmlns:custom2="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <PreferenceCategory android:title="@string/prefs_categorytitle_billingcycle">

        <ListPreference
            android:entries="@array/prefs_entries_intervaltype"
            android:entryValues="@array/prefs_entryvalues_intervaltype"
            android:defaultValue="DayNOfMonthNetworkStatsInterval"
            android:key="@string/prefs_itemkey_intervaltype"
            android:title="@string/prefs_itemtitle_intervaltype" />

        <com.github.dae3.datadial.EditIntPreference
            android:defaultValue="1"
            android:key="@string/prefs_key_billingcycle_startday"
            android:title="@string/prefs_title_startdate"
            custom:maximum="31"
            custom:minimum="1"
            custom:unitcaption=""/>

        <com.github.dae3.datadial.EditGigabytePreference
            android:key="@string/prefs_key_maxdata"
            android:title="@string/prefs_itemtitle_maxdata"
            android:defaultValue="2.0"
            custom:minimum="0.0"
            custom:step="0.5"
            custom:unitcaption="Gb"/>

        <com.github.dae3.datadial.LongClickableSwitchPreference
            android:key="@string/pref_key_decimalGb"
            android:title="@string/pref_GbIs1000Bytes_title"
            android:summaryOn="@string/pref_GbIs1000Bytes_summaryOff"
            android:summaryOff="@string/pref_GbIs1000Bytes_summaryOff"
            custom2:moreInfoTitle="@string/pref_decimalGb_moreinfoTitle"
            custom2:moreInfoTextResource="@raw/gb1024vs1000"
            android:defaultValue="true" />

    </PreferenceCategory>
</PreferenceScreen>