<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://dever.example.com">
    <PreferenceCategory android:title="@string/prefs_categorytitle_billingcycle">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/prefs_entries_intervaltype"
            android:entryValues="@array/prefs_entryvalues_intervaltype"
            android:key="@string/prefs_itemkey_intervaltype"
            android:title="@string/prefs_itemtitle_intervaltype" />

        <com.example.dever.nonUglyDataUsageWidget.EditIntPreference
            android:defaultValue="1"
            android:key="@string/prefs_key_billingcycle_startday"
            android:title="@string/prefs_title_startdate"
            custom:maximum="31"
            custom:minimum="1" />

        <com.example.dever.nonUglyDataUsageWidget.EditGigabytePreference
            android:key="@string/prefs_key_maxdata"
            android:title="Max data"
            custom:minimum="0"
            custom:step="1" />

    </PreferenceCategory>
</PreferenceScreen>