<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottomnav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottomnav_title_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/bottomnav_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_activity_title_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/bottomnav_about"
        android:title="@string/bottomnav_title_about"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:enabled="true"
        />
</menu>