<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/prepermission_fragment_text1"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usage_permission_text_1" />

    <ImageView
        android:id="@+id/usage_permission_image_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/usage_perm_screen_1" />

    <TextView
        android:id="@+id/prepermission_fragment_text2"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usage_permission_text_2" />

    <ImageView
        android:id="@+id/usage_permission_image_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/usage_perm_screen_2" />


    <TextView
        android:id="@+id/prepermission_fragment_text3"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usage_permission_text_3" />

    <Button
        android:id="@+id/usage_grant_permission_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prepermission_button_grant_caption"/>

    <LinearLayout
        android:id="@+id/usage_permission_granted_sublayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:visibility="invisible"
        >

        <TextView
            android:id="@+id/prepermission_granted_text"
            android:text="@string/permission_granted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Large"
            />

        <ImageView
            android:id="@+id/prepermission_tick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_black_48dp"
            android:tint="@color/green"/>


    </LinearLayout>

</LinearLayout>
